# token_economics

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: otelcollectorconfig.yaml  price_book.json  workflow.yml
docs/: architecture.md  upstream_nvidia.md  validation_checklist.md
notebooks/: nat_relay_token_economics_poc.ipynb
sample_data/: agent_trace_events.jsonl  relay_atof_events.jsonl  token_economics_summary.csv
scripts/: __init__.py  finance_tools.py  parse_relay_atof.py  run_local_demo.py  token_economics.py  validate_repo.py
tests/: test_token_economics.py
